# mcp_remote_execution

./: .gitignore  README.md  mcp_client.py  mcp_server.py  pyproject.toml  sandbox_manager.py
