[project]
name = "mcp-remote-execution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-openai>=0.3.34",
    "mcp-use>=1.3.11",
    "mcp[cli]>=1.15.0",
    "novita-sandbox>=1.0.4",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
]
